[gd_scene load_steps=2 format=3 uid="uid://ci7tcshn6y7qf"]

[ext_resource type="Script" path="res://roaming_pov/ClickToSearch.gd" id="1"]

[node name="ClickToSearch" type="Area2D"]
script = ExtResource("1")
next_scene = "res://roaming_pov/roaming_pov.tscn"

[connection signal="input_event" from="." to="." method="_on_ClickToSearch_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ClickToSearch_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickToSearch_mouse_exited"]
